<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Deleia Marmitas</string>
    <string name="nav_header_subtitle">deleiamarmitas@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servico">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_info">Sobre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>