<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.cursomobile.atmconsultoria.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_servico"
        android:name="com.cursomobile.atmconsultoria.ui.servicos.ServicosFragment"
        android:label="@string/menu_servico"
        tools:layout="@layout/fragment_servicos" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.cursomobile.atmconsultoria.ui.clientes.ClienteFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.cursomobile.atmconsultoria.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.cursomobile.atmconsultoria.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

</navigation>